Contribution Number Search added

--- a/mongodemo/src/main/resources/templates/copy_excel.html
+++ b/mongodemo/src/main/resources/templates/copy_excel.html
@@ -80,7 +80,7 @@
   <div class="table-container" id="resultsBlock">
     <ul>
       <li style="display: inline-block; zoom:1;" th:each="item : ${page.content}">
-        <span th:text="${item.backerNumber}" />
+        <span th:text="${item.contributionNumber}" />
       </li>
     </ul>
   </div>
