--- a/mongodemo/src/main/resources/static/css/bulma.css
+++ b/mongodemo/src/main/resources/static/css/bulma.css
@@ -1,4 +1,4 @@
-/*! bulma.io v0.8.0 | MIT License | github.com/jgthms/bulma */
+/*! bulma.io v0.8.2 | MIT License | github.com/jgthms/bulma */
 @-webkit-keyframes spinAround {
   from {
     transform: rotate(0deg);
@@ -2967,8 +2967,9 @@ fieldset[disabled] .button {
 
 .container.is-fluid {
   max-width: none;
-  padding-left: 32px;
-  padding-right: 32px;
+  padding-top: 16px;
+  padding-left: 16px;
+  padding-right: 16px;
   width: 100%;
 }
 
@@ -3428,9 +3429,19 @@ fieldset[disabled] .button {
   color: #fff;
 }
 
+.notification.is-primary.is-light {
+  background-color: #ebfffc;
+  color: #00947e;
+}
+
 .notification.is-link {
   background-color: #3273dc;
   color: #fff;
+}
+
+.notification.is-link.is-light {
+  background-color: #eef3fc;
+  color: #2160c4;
 }
 
 .notification.is-info {
@@ -3438,9 +3449,19 @@ fieldset[disabled] .button {
   color: #fff;
 }
 
+.notification.is-info.is-light {
+  background-color: #eef6fc;
+  color: #1d72aa;
+}
+
 .notification.is-success {
   background-color: #48c774;
   color: #fff;
+}
+
+.notification.is-success.is-light {
+  background-color: #effaf3;
+  color: #257942;
 }
 
 .notification.is-warning {
@@ -3448,9 +3469,19 @@ fieldset[disabled] .button {
   color: rgba(0, 0, 0, 0.7);
 }
 
+.notification.is-warning.is-light {
+  background-color: #fffbeb;
+  color: #947600;
+}
+
 .notification.is-danger {
   background-color: #f14668;
   color: #fff;
+}
+
+.notification.is-danger.is-light {
+  background-color: #feecf0;
+  color: #cc0f35;
 }
 
 .progress {
@@ -3461,7 +3492,7 @@ fieldset[disabled] .button {
   display: block;
   height: 1rem;
   overflow: hidden;
-  padding: 0;
+  padding: 0rem;
   width: 100%;
 }
 
@@ -5659,6 +5690,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .card {
+  padding: 0rem 0.5rem 0rem 0.5rem;
   background-color: white;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
   color: #4a4a4a;
@@ -7079,7 +7111,7 @@ body.has-navbar-fixed-bottom {
   height: 3.25rem;
   position: relative;
   width: 3.25rem;
-  margin-left: auto;
+  margin-right: auto;
 }
 
 .navbar-burger span {
@@ -7157,7 +7189,6 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .navbar-item {
-  display: block;
   flex-grow: 0;
   flex-shrink: 0;
 }
@@ -7326,9 +7357,6 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
     align-items: center;
     display: flex;
   }
-  .navbar-item {
-    display: flex;
-  }
   .navbar-item.has-dropdown {
     align-items: stretch;
   }
@@ -7468,6 +7496,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
 }
 
 .pagination {
+  padding: 0rem;
   font-size: 1rem;
   margin: -0.25rem;
 }
@@ -7631,6 +7660,7 @@ a.navbar-item:focus, a.navbar-item:focus-within, a.navbar-item:hover, a.navbar-i
   border-radius: 6px;
   box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
   font-size: 1rem;
+  padding: 1.0rem 1.0rem 1.0rem 1.0rem;
 }
 
 .panel:not(:last-child) {
@@ -10718,21 +10748,18 @@ label.panel-block:hover {
 }
 
 .hero.is-small .hero-body {
-  padding-bottom: 1.5rem;
-  padding-top: 1.5rem;
+  padding: 1.5rem;
 }
 
 @media screen and (min-width: 769px), print {
   .hero.is-medium .hero-body {
-    padding-bottom: 9rem;
-    padding-top: 9rem;
+    padding: 9rem 1.5rem;
   }
 }
 
 @media screen and (min-width: 769px), print {
   .hero.is-large .hero-body {
-    padding-bottom: 18rem;
-    padding-top: 18rem;
+    padding: 18rem 1.5rem;
   }
 }
 
@@ -10813,7 +10840,7 @@ label.panel-block:hover {
 }
 
 .section {
-  padding: 3rem 1.5rem;
+  padding: 1.0rem 1.0rem 1.0rem 1.0rem;
 }
 
 @media screen and (min-width: 1024px) {
@@ -10827,6 +10854,6 @@ label.panel-block:hover {
 
 .footer {
   background-color: #fafafa;
-  padding: 3rem 1.5rem 6rem;
+  padding: 0.6rem 0.5rem 0.6rem 0.5rem;
 }
 /*# sourceMappingURL=bulma.css.map */
