--- a/mongodemo/src/main/resources/templates/addMobileView.html
+++ b/mongodemo/src/main/resources/templates/addMobileView.html
@@ -10,12 +10,22 @@
     <script src="https://kit.fontawesome.com/81e4f4ee55.js" crossorigin="anonymous"></script>
     
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+
+      <script type="text/javascript">
+          $("#back_btn").click(function (){
+              window.history.back();
+            });
+      </script>
   </head>
   <body>
 
+
     <div class="container is-fluid">
 
-        <br/>
+        <p class="panel-heading is-primary">
+            <span th:text="*{movieItem.title}" />
+        </p>
 
         <div class="columns is-full">
 
@@ -90,7 +100,7 @@
                             <button type="submit" class="button is-link">Submit</button>
                           </div>
                           <div class="control">
-                            <button type="reset" class="button is-link is-light">Cancel</button>
+                            <button id="back_btn" type="reset" class="button is-link is-light">Cancel</button>
                           </div>
                         </div>
 
@@ -105,7 +115,7 @@
 
     </div>
 
-<!-- Footer Sections Goes Here -->
+    <!-- Footer Sections Goes Here -->
 
 	<footer class="footer">
         <div class="content has-text-centered">
