--- a/mongodemo/src/main/resources/templates/contrib.html
+++ b/mongodemo/src/main/resources/templates/contrib.html
@@ -11,7 +11,7 @@
 
   <script type="text/javascript">
     function retrieveGuests() {
-      var url = '/excel';
+      var url = '/contrib';
 
       if ($('#title').val() != '') {
           url = url + '/' + $('#title').val();
@@ -48,7 +48,7 @@
     <div class="level-item has-text-centered">
       <div>
         <p class="heading">Last Updated</p>
-        <p class="title">12-May-2020</span></p>
+        <p class="title">20-May-2020</span></p>
       </div>
     </div>
   </nav>
@@ -58,7 +58,7 @@
       <div class="level-right">
         <div class="level-item">
           <p class="subtitle is-6">
-            Backer Id
+            Contribution Id
           </p>
         </div>
         <div class="level-item">
