--- a/mongodemo/src/main/resources/templates/contrib_results.html
+++ b/mongodemo/src/main/resources/templates/contrib_results.html
@@ -23,7 +23,7 @@
 
     <ul>
       <li style="display: inline-block; zoom:1;" th:each="item : ${page.content}">
-        <span th:text="${item.backerNumber}" />
+        <span th:text="${item.contributionNumber}" />
       </li>
     </ul>
 
